Fixing the footer overflowing upwards on mobile

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -262,7 +262,7 @@ footer {
 }
 @media (max-width: 1200px) {
   footer {
-    font-size: 0.7rem;
+    font-size: 0.5rem;
     gap: 0.2rem;
   }
 }
